--- a/scss/style.css
+++ b/scss/style.css
@@ -79,7 +79,8 @@ h6 {
 }
 
 .header {
-  position: relative;
+  position: absolute;
+  z-index: 5;
   padding: 30px 0;
 }
 @media (max-width: 768px) {
