--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,8 @@
 // ===== HEADER =====
 
 .header {
-    position: relative;
+    position: absolute;
+    z-index: 5;
     padding: 30px 0;
     @media (max-width: 768px) {
         padding: 15px 0;
