--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,10 @@
 // ===== HEADER =====
 
 .header {
-    position: absolute;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
     z-index: 5;
     padding: 30px 0;
     @media (max-width: 768px) {
@@ -31,6 +34,7 @@
     &__menu {
         display: flex;
         gap: 56px;
+        color: white;
 
         @media (max-width: 940px) {
             & {
@@ -51,8 +55,15 @@
 .hero {
     position: relative;
     &__bg {
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+    }
+
+    &__inner {
         position: absolute;
-        z-index: -1;
+        z-index: 2;
+        bottom: 20%;
     }
 
     &__subtitle {
@@ -75,14 +86,16 @@
         display: flex;
         gap: 45px;
         hr {
-            width: 887px;
+            width: 100%;
+            max-width: 887px;
             height: 2px;
             background-color: white;
+            align-self: center;
         }
         
         p {
             color: white;
-            flex-wrap: nowrap;
+            text-wrap: nowrap;
             font-size: 18px;
             font-weight: 500;
             line-height: 27px;
