--- a/scss/style.css
+++ b/scss/style.css
@@ -118,26 +118,28 @@ h6 {
   }
 }
 
-.hero {
-  position: relative;
-}
 .hero__bg {
   width: 100vw;
   height: 100vh;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .hero__inner {
   position: absolute;
   z-index: 2;
   bottom: 20%;
+  width: 100%;
+  max-width: inherit;
+}
+@media (max-width: 1140px) {
+  .hero__inner {
+    max-width: calc(100% - 30px);
+  }
 }
 .hero__subtitle {
   font-weight: 700;
   font-size: 48px;
   line-height: 72px;
   color: white;
-  margin: 412 0 10 0;
 }
 .hero__title {
   font-size: 100px;
@@ -159,8 +161,10 @@ h6 {
 }
 .hero__video p {
   color: white;
-  text-wrap: nowrap;
+  white-space: nowrap;
   font-size: 18px;
   font-weight: 500;
   line-height: 27px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
