--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,7 +53,6 @@
 // ===== HERO BLOCK =====
 
 .hero {
-    position: relative;
     &__bg {
         width: 100vw;
         height: 100vh;
@@ -64,6 +63,13 @@
         position: absolute;
         z-index: 2;
         bottom: 20%;
+        
+        width: 100%;
+        max-width: inherit;
+        
+        @media (max-width: 1140px) {
+            max-width: calc(100% - 30px);
+        }
     }
 
     &__subtitle {
@@ -71,7 +77,6 @@
         font-size: 48px;
         line-height: 72px;
         color: white;
-        margin: 412 0 10 0;
     }
 
     &__title {
@@ -95,7 +100,7 @@
         
         p {
             color: white;
-            text-wrap: nowrap;
+            white-space: nowrap;
             font-size: 18px;
             font-weight: 500;
             line-height: 27px;
