--- a/scss/style.css
+++ b/scss/style.css
@@ -13,6 +13,7 @@
 
 html,
 body {
+  background-color: rgb(26, 26, 33);
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   height: 100%;
@@ -118,9 +119,6 @@ h6 {
   }
 }
 
-.hero {
-  position: relative;
-}
 .hero__bg {
   width: 100vw;
   height: 100vh;
@@ -131,13 +129,19 @@ h6 {
   position: absolute;
   z-index: 2;
   bottom: 20%;
+  width: 100%;
+  max-width: inherit;
+}
+@media (max-width: 1140px) {
+  .hero__inner {
+    max-width: calc(100% - 30px);
+  }
 }
 .hero__subtitle {
   font-weight: 700;
   font-size: 48px;
   line-height: 72px;
   color: white;
-  margin: 412 0 10 0;
 }
 .hero__title {
   font-size: 100px;
@@ -152,15 +156,35 @@ h6 {
 }
 .hero__video hr {
   width: 100%;
-  max-width: 887px;
   height: 2px;
   background-color: white;
   align-self: center;
 }
 .hero__video p {
   color: white;
-  text-wrap: nowrap;
+  white-space: nowrap;
   font-size: 18px;
   font-weight: 500;
   line-height: 27px;
+}
+
+.news {
+  position: relative;
+}
+.news__inner {
+  display: flex;
+  gap: 30px;
+}
+.news__img img {
+  border-radius: 20px 0 20px 0;
+}
+.news__img p {
+  position: absolute;
+  bottom: 10%;
+  margin-left: 20px;
+  background-color: #7A66CC;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  color: white;
 }/*# sourceMappingURL=style.css.map */
