--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,7 +53,6 @@
 // ===== HERO BLOCK =====
 
 .hero {
-    position: relative;
     &__bg {
         width: 100vw;
         height: 100vh;
@@ -64,6 +63,12 @@
         position: absolute;
         z-index: 2;
         bottom: 20%;
+        width: 100%;
+        max-width: inherit;
+
+        @media (max-width: 1140px) {
+            max-width: calc(100% - 30px);
+        }
     }
 
     &__subtitle {
@@ -71,7 +76,6 @@
         font-size: 48px;
         line-height: 72px;
         color: white;
-        margin: 412 0 10 0;
     }
 
     &__title {
@@ -87,7 +91,6 @@
         gap: 45px;
         hr {
             width: 100%;
-            max-width: 887px;
             height: 2px;
             background-color: white;
             align-self: center;
@@ -95,10 +98,35 @@
         
         p {
             color: white;
-            text-wrap: nowrap;
+            white-space: nowrap;
             font-size: 18px;
             font-weight: 500;
             line-height: 27px;
         }
     }
+}
+
+.news {
+    position: relative;
+   &__inner {
+        display: flex;
+        gap: 30px;
+   }
+
+   &__img {
+        img {
+            border-radius: 20px 0 20px 0;
+        }   
+        
+        p {
+            position: absolute;
+            bottom: 10%;
+            margin-left: 20px;
+            background-color: #7A66CC;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 24px;
+            color: white;
+        }
+   }
 }
