--- a/scss/style.css
+++ b/scss/style.css
@@ -187,4 +187,32 @@ h6 {
   font-weight: 700;
   line-height: 24px;
   color: white;
+}
+
+.about_us {
+  margin-top: 180px;
+}
+.about_us__container {
+  color: white;
+  display: flex;
+  gap: 125px;
+}
+.about_us__logo {
+  display: flex;
+  margin-bottom: 60px;
+}
+.about_us__title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 72px;
+}
+.about_us__info {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 60px;
+}
+.about_us__information-inner {
+  font-weight: 600;
+  line-height: 27px;
 }/*# sourceMappingURL=style.css.map */
