--- a/scss/style.scss
+++ b/scss/style.scss
@@ -130,3 +130,39 @@
         }
    }
 }
+
+.about_us {
+    margin-top: 180px;
+    &__container {
+        color: white;
+        display: flex;
+        gap: 125px;
+    }
+
+    &__logo {
+        display: flex;
+        margin-bottom: 60px;
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 72px;
+    }
+
+    &__info {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        margin-bottom: 60px;
+    }
+
+    &__information {
+
+    }
+
+    &__information-inner {
+        font-weight: 600;
+        line-height: 27px;
+    }
+}
