--- a/scss/style.css
+++ b/scss/style.css
@@ -120,10 +120,10 @@ h6 {
 }
 
 .hero__bg {
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   height: 100vh;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .hero__inner {
   position: absolute;
@@ -189,30 +189,32 @@ h6 {
   color: white;
 }
 
-.about_us {
+.about {
   margin-top: 180px;
 }
-.about_us__container {
+.about__container {
   color: white;
   display: flex;
   gap: 125px;
 }
-.about_us__logo {
+.about__logo {
   display: flex;
   margin-bottom: 60px;
 }
-.about_us__title {
+.about__title {
   font-weight: 700;
   font-size: 48px;
   line-height: 72px;
 }
-.about_us__info {
+.about__info {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 60px;
 }
-.about_us__information-inner {
+.about__information-inner {
   font-weight: 600;
   line-height: 27px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
