--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
-@import "null.scss";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import "base/null";
 [class*="__container"] {
     padding: 0 15px;
     width: 100%;
@@ -6,163 +7,6 @@
     margin: 0 auto;
 }
 
-// ===== HEADER =====
-
-.header {
-    position: fixed;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    z-index: 5;
-    padding: 30px 0;
-    @media (max-width: 768px) {
-        padding: 15px 0;
-    }
-    &__container {
-        max-width: 920px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        @media (max-width: 768px) {
-            & {
-                justify-content: center;
-            }
-        }
-    }
-
-    &__menu {
-        display: flex;
-        gap: 56px;
-        color: white;
-
-        @media (max-width: 940px) {
-            & {
-                gap: 26px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            & {
-                display: none;
-            }
-        }
-    }
-}
-
-// ===== HERO BLOCK =====
-
-.hero {
-    &__bg {
-        width: 100vw;
-        height: 100vh;
-        object-fit: cover;
-    }
-
-    &__inner {
-        position: absolute;
-        z-index: 2;
-        bottom: 20%;
-        width: 100%;
-        max-width: inherit;
-
-        @media (max-width: 1140px) {
-            max-width: calc(100% - 30px);
-        }
-    }
-
-    &__subtitle {
-        font-weight: 700;
-        font-size: 48px;
-        line-height: 72px;
-        color: white;
-    }
-
-    &__title {
-        font-size: 100px;
-        font-weight: 700;
-        line-height: 150px;
-        -webkit-text-stroke:1px white;
-        color: transparent;
-    }
-
-    &__video {
-        display: flex;
-        gap: 45px;
-        hr {
-            width: 100%;
-            height: 2px;
-            background-color: white;
-            align-self: center;
-        }
-        
-        p {
-            color: white;
-            white-space: nowrap;
-            font-size: 18px;
-            font-weight: 500;
-            line-height: 27px;
-        }
-    }
-}
-
-.news {
-    position: relative;
-   &__inner {
-        display: flex;
-        gap: 30px;
-   }
-
-   &__img {
-        img {
-            border-radius: 20px 0 20px 0;
-        }   
-        
-        p {
-            position: absolute;
-            bottom: 10%;
-            margin-left: 20px;
-            background-color: #7A66CC;
-            font-size: 16px;
-            font-weight: 700;
-            line-height: 24px;
-            color: white;
-        }
-   }
-}
-
-.about_us {
-    margin-top: 180px;
-    &__container {
-        color: white;
-        display: flex;
-        gap: 125px;
-    }
-
-    &__logo {
-        display: flex;
-        margin-bottom: 60px;
-    }
-
-    &__title {
-        font-weight: 700;
-        font-size: 48px;
-        line-height: 72px;
-    }
-
-    &__info {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 24px;
-        margin-bottom: 60px;
-    }
-
-    &__information {
-
-    }
-
-    &__information-inner {
-        font-weight: 600;
-        line-height: 27px;
-    }
-}
+@import "header";
+@import "home";
+@import "footer";
