--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,5 +1,4 @@
 // ===== HEADER =====
-
 .header {
   position: fixed;
   left: 50%;
@@ -15,12 +14,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
 
-    @media (max-width: 768px) {
-      & {
-        justify-content: center;
-      }
-    }
+  &__logo {
+    position: relative;
+    z-index: 5;
   }
 
   &__menu {
@@ -36,7 +34,82 @@
 
     @media (max-width: 768px) {
       & {
-        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 0;
+        padding-top: 100px;
+
+        font-size: 24px;
+
+        background-color: rgba(0, 0, 0, 0.95);
+        opacity: 0;
+        transition: all 0.3s ease 0s;
+      }
+    }
+
+    &.menu-open {
+      height: 100vh;
+      opacity: 1;
+    }
+  }
+}
+
+//Burger
+.icon-menu {
+  display: none;
+  @media (max-width: 768px) {
+    flex-shrink: 0;
+
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+    span,
+    &::before,
+    &::after {
+      content: "";
+      transition: all 0.3s ease 0s;
+      right: 0;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #ffffff;
+    }
+    &::before {
+      top: 0;
+    }
+    &::after {
+      bottom: 0;
+    }
+    span {
+      top: calc(50% - 1px);
+    }
+    &.menu-open {
+      span {
+        width: 0;
+      }
+
+      span,
+      &::before,
+      &::after {
+        background-color: #ffffff;
+      }
+
+      &::before {
+        top: calc(50% - 1px);
+        transform: rotate(-45deg);
+      }
+      &::after {
+        bottom: calc(50% - 1px);
+        transform: rotate(45deg);
       }
     }
   }
