--- a/scss/header.css
+++ b/scss/header.css
@@ -17,10 +17,9 @@
   align-items: center;
   justify-content: space-between;
 }
-@media (max-width: 768px) {
-  .header__container {
-    justify-content: center;
-  }
+.header__logo {
+  position: relative;
+  z-index: 5;
 }
 .header__menu {
   display: flex;
@@ -34,8 +33,69 @@
 }
 @media (max-width: 768px) {
   .header__menu {
-    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 0;
+    padding-top: 100px;
+    font-size: 24px;
+    background-color: rgba(0, 0, 0, 0.95);
+    opacity: 0;
+    transition: all 0.3s ease 0s;
   }
 }
+.header__menu.menu-open {
+  height: 100vh;
+  opacity: 1;
+}
 
-/*# sourceMappingURL=header.css.map */
+.icon-menu {
+  display: none;
+}
+@media (max-width: 768px) {
+  .icon-menu {
+    flex-shrink: 0;
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+  }
+  .icon-menu span, .icon-menu::before, .icon-menu::after {
+    content: "";
+    transition: all 0.3s ease 0s;
+    right: 0;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+  }
+  .icon-menu::before {
+    top: 0;
+  }
+  .icon-menu::after {
+    bottom: 0;
+  }
+  .icon-menu span {
+    top: calc(50% - 1px);
+  }
+  .icon-menu.menu-open span {
+    width: 0;
+  }
+  .icon-menu.menu-open span, .icon-menu.menu-open::before, .icon-menu.menu-open::after {
+    background-color: #ffffff;
+  }
+  .icon-menu.menu-open::before {
+    top: calc(50% - 1px);
+    transform: rotate(-45deg);
+  }
+  .icon-menu.menu-open::after {
+    bottom: calc(50% - 1px);
+    transform: rotate(45deg);
+  }
+}/*# sourceMappingURL=header.css.map */
