--- a/scss/home.css
+++ b/scss/home.css
@@ -2,7 +2,8 @@
   width: 100%;
   max-width: 100vw;
   height: 100vh;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .hero__inner {
   position: absolute;
@@ -47,53 +48,58 @@
   line-height: 27px;
 }
 
-.news {
-  position: relative;
-}
 .news__inner {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 }
-.news__img img {
+.news__img {
+  position: relative;
   border-radius: 20px 0 20px 0;
+  overflow: hidden;
+  justify-content: center;
+  max-width: 350px;
+  flex: 1 1 30%;
+}
+.news__img img {
+  width: 100%;
 }
 .news__img p {
   position: absolute;
-  bottom: 10%;
-  margin-left: 20px;
-  background-color: #7A66CC;
+  width: 100%;
+  bottom: 0;
+  padding: 20px 0 20px 20px;
+  background-color: rgba(122, 102, 204, 0.8);
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
   color: white;
 }
 
-.about_us {
+.about {
   margin-top: 180px;
 }
-.about_us__container {
+.about__container {
   color: white;
   display: flex;
   gap: 125px;
 }
-.about_us__logo {
+.about__logo {
   display: flex;
   margin-bottom: 60px;
 }
-.about_us__title {
+.about__title {
   font-weight: 700;
   font-size: 48px;
   line-height: 72px;
 }
-.about_us__info {
+.about__info {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 60px;
 }
-.about_us__information-inner {
+.about__information-inner {
   font-weight: 600;
   line-height: 27px;
-}
-
-/*# sourceMappingURL=home.css.map */
+}/*# sourceMappingURL=home.css.map */
