--- a/scss/home.scss
+++ b/scss/home.scss
@@ -57,22 +57,31 @@
 
 // ===== NEWS BLOCK =====
 .news {
-  position: relative;
   &__inner {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
   }
 
   &__img {
+    position: relative;
+    border-radius: 20px 0 20px 0;
+    overflow: hidden;
+    justify-content: center;
+    //width: 30%;
+    max-width: 350px;
+    flex: 1 1 30%;
     img {
-      border-radius: 20px 0 20px 0;
+      
+      width: 100%;
     }
 
     p {
       position: absolute;
-      bottom: 10%;
-      margin-left: 20px;
-      background-color: #7A66CC;
+      width: 100%;
+      bottom: 0;
+      padding: 20px 0 20px 20px;
+      background-color: rgba(122, 102, 204, 0.8);
       font-size: 16px;
       font-weight: 700;
       line-height: 24px;
@@ -109,9 +118,6 @@
     margin-bottom: 60px;
   }
 
-  &__information {
-
-  }
 
   &__information-inner {
     font-weight: 600;
