--- a/scss/style.css
+++ b/scss/style.css
@@ -185,7 +185,8 @@ h6 {
   width: 100%;
   max-width: 100vw;
   height: 100vh;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .hero__inner {
   position: absolute;
@@ -230,21 +231,28 @@ h6 {
   line-height: 27px;
 }
 
-.news {
-  position: relative;
-}
 .news__inner {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 }
-.news__img img {
+.news__img {
+  position: relative;
   border-radius: 20px 0 20px 0;
+  overflow: hidden;
+  justify-content: center;
+  max-width: 350px;
+  flex: 1 1 30%;
+}
+.news__img img {
+  width: 100%;
 }
 .news__img p {
   position: absolute;
-  bottom: 10%;
-  margin-left: 20px;
-  background-color: #7A66CC;
+  width: 100%;
+  bottom: 0;
+  padding: 20px 0 20px 20px;
+  background-color: rgba(122, 102, 204, 0.8);
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
@@ -277,6 +285,4 @@ h6 {
 .about__information-inner {
   font-weight: 600;
   line-height: 27px;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
