--- a/scss/home.scss
+++ b/scss/home.scss
@@ -103,6 +103,7 @@
   &__logo {
     display: flex;
     margin-bottom: 60px;
+    gap: 30px;
   }
 
   &__title {
@@ -118,9 +119,18 @@
     margin-bottom: 60px;
   }
 
-
   &__information-inner {
     font-weight: 600;
     line-height: 27px;
+    display: flex;
+    gap: 20px;
+  }
+
+  &__mark {
+    width: 30px;
+    height: 30px;
+    background-color: #7A66CC;
+    border: 1px solid #7A66CC;
+    border-radius: 15px 0 15px 0;
   }
 }
