--- a/scss/home.scss
+++ b/scss/home.scss
@@ -94,10 +94,14 @@
 // ===== ABOUT BLOCK =====
 .about {
   margin-top: 180px;
+  // temp
+  padding-bottom: 100px;
+  // temp 
   &__container {
     color: white;
     display: flex;
     gap: 125px;
+    align-items: center;
   }
 
   &__logo {
@@ -119,7 +123,14 @@
     margin-bottom: 60px;
   }
 
+  &__information {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+  }
+
   &__information-inner {
+    width: 50%;
     font-weight: 600;
     line-height: 27px;
     display: flex;
@@ -133,4 +144,20 @@
     border: 1px solid #7A66CC;
     border-radius: 15px 0 15px 0;
   }
+
+  &__img-inner {
+    position: relative;
+    img {
+      border-radius: 30px 0 30px 0;
+    }
+
+    img:last-child {
+      position: absolute;
+      z-index: -1;
+      top: 65px;
+      left: 95px;
+      filter: brightness(0.2);
+    }
+  }
+
 }
