--- a/scss/home.scss
+++ b/scss/home.scss
@@ -35,6 +35,7 @@
   }
 
   &__video {
+    position: relative;
     display: flex;
     gap: 45px;
     hr {
@@ -44,6 +45,25 @@
       align-self: center;
     }
 
+    &::after {
+      content: '';
+      position: absolute;
+      width: 70px;
+      height: 2px;
+      border: 2px solid #7A66CC;
+      left: 67px;
+      top: 12px;
+    }
+    
+    &::before {
+      content: '';
+      position: absolute;
+      width: 3px;
+      height: 20px;
+      border: 2px solid #7A66CC;
+      left: 135px;
+      top: 3px;
+    }
     p {
       color: white;
       white-space: nowrap;
@@ -61,6 +81,11 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    justify-content: center;
+    @media (max-width: 500px) {
+      flex-direction: column;
+      max-width: 100%;
+    }
   }
 
   &__img {
@@ -68,9 +93,10 @@
     border-radius: 20px 0 20px 0;
     overflow: hidden;
     justify-content: center;
-    //width: 30%;
-    max-width: 350px;
     flex: 1 1 30%;
+    @media (min-width: 500px) {
+      max-width: 350px;
+    }
     img {
       
       width: 100%;
@@ -86,6 +112,12 @@
       font-weight: 700;
       line-height: 24px;
       color: white;
+      @media (max-width: 900px) {
+        line-height: 16px;
+        font-size: 14px;
+        padding: 10px 0 10px 0;
+      }
+      
     }
   }
 }
@@ -93,27 +125,67 @@
 
 // ===== ABOUT BLOCK =====
 .about {
+    // temp
+    padding-bottom: 100px;
+    // temp
   margin-top: 180px;
-  // temp
-  padding-bottom: 100px;
-  // temp 
+  @media (max-width: 1024px) {
+    margin-top: 100px;
+  }  
+  @media (max-width: 600px) {
+    margin-top: 50px;
+  } 
   &__container {
+    justify-content: space-between;
     color: white;
     display: flex;
-    gap: 125px;
     align-items: center;
+    @media (max-width: 1050px) {
+      gap: 90px;
+    }
+    @media (max-width: 900px) {
+      flex-direction: column;
+    }
+  }
+
+  &__text-inner {
+    width: 100%;
+    max-width: 540px;
+    @media (max-width: 900px) {
+      max-width: 80%;
+    }
+
+    @media (max-width: 600px) {
+      max-width: 100%;
+    }
   }
 
   &__logo {
     display: flex;
     margin-bottom: 60px;
     gap: 30px;
+    @media (max-width: 950px) {
+      gap: 15px;
+    }
+
+    @media (max-width: 600px) {
+      margin-bottom: 30px;
+    }
   }
 
   &__title {
     font-weight: 700;
     font-size: 48px;
     line-height: 72px;
+    @media (max-width: 450px) {
+      flex-wrap: nowrap; 
+      font-size: 34px;
+      line-height: 57px;
+    }
+    @media (max-width: 350px) {
+      font-size: 28px;
+      line-height: 45px;
+    }
   }
 
   &__info {
@@ -121,12 +193,20 @@
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 60px;
+    @media (max-width: 950px) {
+      font-size: 14px;
+      line-height: 18px;
+    }
   }
 
   &__information {
     display: flex;
     flex-wrap: wrap;
     row-gap: 30px;
+    @media (max-width: 450px) {
+      flex-direction: column;
+      justify-content: center;
+    }
   }
 
   &__information-inner {
@@ -147,8 +227,13 @@
 
   &__img-inner {
     position: relative;
+    width: 100%;
+    max-width: 445px;
     img {
       border-radius: 30px 0 30px 0;
+      @media (max-width: 450px) {
+        width: 100%;
+      }
     }
 
     img:last-child {
@@ -157,6 +242,9 @@
       top: 65px;
       left: 95px;
       filter: brightness(0.2);
+      @media (max-width: 600px) {
+        display: none;
+      } 
     }
   }
 
